implementing opening and closing a new transation window in wallet section

--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -89,7 +89,7 @@
           </div>
         </section>
 
-        <section class="card notes active-card">
+        <section class="card notes hidden">
           <h2 class="card__title notes__title">Notes</h2>
           <div action="" class="notes__form">
             <input
@@ -137,7 +137,7 @@
           </div>
         </section>
 
-        <section class="card wallet hidden">
+        <section class="card wallet active-card">
           <h2 class="card__title wallet__title">Your Wallet</h2>
 
           <div class="wallet__buttons">
