implementing adding new transactions to incomes/expenses lists

--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -146,33 +146,12 @@
           <div class="wallet__summary">
             <div class="summary__expenses">
               <h3 class="summary__expenses--title">Expenses:</h3>
-              <div class="expenses__list">
-                <p class="expenses__list--item">
-                  Course <span class="expenses__list--value">50</span>
-                </p>
-                <p class="expenses__list--item">
-                  Cola <span class="expenses__list--value">50</span>
-                </p>
-                <p class="expenses__list--item">
-                  Netflix <span class="expenses__list--value">50</span>
-                </p>
-              </div>
+              <div class="expenses__list"></div>
             </div>
 
             <div class="summary__incomes">
               <h3 class="summary__incomes--title">Incomes:</h3>
-              <div class="incomes__list">
-                <p class="icomes__list--item">
-                  Salary <span class="expenses__list--value">50</span>
-                </p>
-                <p class="icomes__list--item">
-                  revenue from Pati
-                  <span class="expenses__list--value">50</span>
-                </p>
-                <p class="icomse__list--item">
-                  Crypto <span class="expenses__list--value">50</span>
-                </p>
-              </div>
+              <ul class="incomes__list"></ul>
             </div>
           </div>
 
