add city to today section

--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -205,6 +205,7 @@
           </div>
 
           <div class="weather">
+            <p class="weather__city">Miasto</p>
             <img
               class="weather__img"
               src="http://openweathermap.org/img/wn/04n@2x.png"
