add money balance with function to count balance in wallet section

--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -140,6 +140,10 @@
         <section class="card wallet active-card">
           <h2 class="card__title wallet__title">Your Wallet</h2>
 
+          <div class="wallet__balance">
+            Money balance: <span class="wallet__balance--value">0.00</span> zł
+          </div>
+
           <div class="wallet__buttons">
             <button class="add-transaction-btn">Add transaction</button>
           </div>
